# wagtail-blog

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
blog/: abstract.py  models.py  urls.py  wp_xml_parser.py
blog/migrations/: 0001_initial.py  0002_blogpage.py  0003_blogindexpage_image.py  0004_alter_blogpagetag_tag.py  0004_auto_20210427_1812.py
blog/templates/blog/: blog_index_page.html  blog_page.html
demo/: settings.py  urls.py
home/: models.py
home/migrations/: 0003_homepage_body.py
home/templates/home/: home_page.html
mysite/settings/: base.py  dev.py  production.py
mysite/templates/: base.html
