[tool.poetry]
name = "wagtail_blog"
version = "3.0.0"
description = "A wordpress like blog app implemented in wagtail"
authors = ["David Burke"]
license = "Apache License"
keywords = ["django", "wagtail", "blog"]
homepage = "https://gitlab.com/thelabnyc/wagtail_blog"
readme = "README.md"
classifiers=[
  "Development Status :: 5 - Production/Stable",
  'Environment :: Web Environment',
  'Framework :: Django',
  'Framework :: Wagtail',
  'Intended Audience :: Developers',
  "License :: OSI Approved :: Apache Software License",
]
packages = [
  { include = "blog" }
]

[tool.poetry.dependencies]
python = "^3.8"
Django = "*"
wagtail = "~5.2.0"
requests = "*"
lxml = "*"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
django-hashers-passlib = "^0.4"
django-storages = "^1.12.3"
django-contrib-comments = "^2.2.0"
django-comments-xtd = "^2.9.5"
ipdb = "^0.13.2"
pylint = "^2.4.4"
pylint-django = "^2.0.13"
boto3 = "^1.24.12"
responses = "^0.21.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

